main.css
/*|||| Utility*/

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root{
    --Universalwidth: 1265px;
    --Navfont: "Menlo", "Consolas", "Monaco", "Liberation Mono", "Lucida Console", monospace;
}

:root{
        
        --Background: #FFFFFF;
        --Primarycolor: #007BFF;
        --Secondarycolor: #212529;
        --Accentcolor: #28A745;
        --Highlightcolor:  #d3d3d3;
        --Textcolor: #212529;
        --Secondarytextcolor: #6C757D;
        --Anchorfilter: opacity(40%);
        --Socialbar0: opacity(50%);
        --Socialcard: opacity(40%);
}



@media (prefers-color-scheme: dark){
    :root{
        --Background: #121212;
        --Primarycolor: #BB86FC;
        --Secondarycolor: #03DAC6;
        --Accentcolor: #CF6679;
        --Highlightcolor:  #6fa2a2;
        --Textcolor: #E0E0E0;
        --Secondarytextcolor: #E0E0E0;
        --Anchorfilter: brightness(10%);
        --Socialbar0: opacity(20%);
        --Socialcard: opacity(40%);
    }
}

html {
    font-family: var(--Navfont);
}

/*|||| Biggest Size*/

@media screen and (min-width: 1000px)
{

html{
    background-color: var(--Background);
}

/*|||| Header*/

nav{
    width: 100%;
    font-size: 1.4rem;
    position: fixed;
}

    /*Main Navigation Bar*/

nav ul{
    background-color: var(--Primarycolor);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: clamp(80px, 2vw, 110px);
    gap: 4rem;
    list-style: none;
    padding-right: clamp(10px, 8vw, 130px);
}

nav .Navwords{
    color: var(--Textcolor);
    margin-left: clamp(140px, 3vw, 180px);
    margin-right: clamp(140px, 3vw, 180px);
    
}

nav .Navname{
    font-weight: bolder;
   font-size: 1.5rem;
}

nav .Navanchors{
    color: var(--Textcolor);
    font-size: 1.4rem;
    text-decoration: none;
}

nav .Navanchors:hover, .Navanchors:focus{
    filter: var(--Anchorfilter);
}

    /*Social Navigation Bar*/

nav ol{
    animation: open1 .5s ease-in-out forwards;
    background-color: var(--Secondarycolor);
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60px;
    list-style: none;
    gap: 2rem;
    padding-top: 6px;
    display: none;
}

nav:hover ol, nav:focus-within ol{
    display: flex;
}

nav ol a:hover, a:focus{
    filter: var(--Socialbar0);
}

@keyframes open1{
    0%{
        transform: scaleY(0);
    }
    80%{
        transform: scaleY(1.2);
    }
    100%{
        transform: scaleY(1);
    }

}

    /*Social Card*/

    .Socialcard{
       padding-top: 150px;
       display: flex;
       justify-content: center;
    }

    .Socialcard .article{
        border: 2px solid var(--Secondarycolor);
        border-radius: 12px;
        padding: 10px 30px 10px 20px;
        width: var(--Universalwidth);
        box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
                    -6px -6px 10px -1px rgba(255, 255, 255, 0.15);
    }

    .Socialcard .SCheader{
        display: flex;
        justify-content: space-between;
        color: var(--Textcolor);
        
    }
    .Socialcard .SCheader .SCheaderD{
        display: flex;
        justify-content: center;
        font-size: 2rem;
    }
    .Socialcard .SCheader .SCheaderul{
        padding-top: 15px;
        display: flex;
        justify-content: center;
        gap: 2rem;
        list-style: none;
    }
    .Socialcard .SCheader .SCheaderul a:hover, a:focus{
        filter: var(--Socialcard);
    }
    .Socialcard .SCheader .SCheaderul img{
        height: 32px;
        width: 32px;
    }

    .Socialcard .SCbody{
        list-style: none;
        font-size: 1.5rem;
    }
    .Socialcard .SCbody a{
        list-style: none;
        text-decoration: none;
        color: var(--Secondarytextcolor);
    }

    
    .SCLitem1{
        display: flex;
        justify-content: center;
        align-items: center;
        border: 2px solid var(--Secondarycolor);
        border-radius: 10px;
        width: 160px;
        height: 40px;
        text-decoration: none;
        color: var(--Secondarytextcolor);
        margin-right: 20px;
        gap: 10px;
     }
 
     .SCLitem1:hover, .SCLitem1:focus{
        background-color: var(--Secondarycolor);
     }

     .SCLitem2{
         
         font-size: 1.3rem;
         
     }
 
     .SCLitem3{
         height: 24px;
         width: 24px;
     }
 
     .resumetab{
         display: flex;
         justify-content: space-between;
     }
 

    .Socialcard .SCfooter{
        padding-top: 20px;
        list-style: none;
        font-size: 1.5rem;
        line-height: 30px;
        color: var(--Textcolor);
    }
    
    /*Skills section*/
    #skills{
        display: flex;
        justify-content: center;
    }
    .skills1{
        
        width: var(--Universalwidth);
        padding: 20px 30px 30px 20px;
    }
    .skills-header-section{
        margin-top: 50px;
        display: flex;
        justify-content: start;
    }

    .skills-header2{
        font-size: 3rem;
        color: var(--Textcolor);
    }

    .skills-main-section{
        font-size: 1.5rem;
    }

    .skills-main-ul{
        display: flex;
        justify-content: start;
        list-style: none;
        gap: 20px;
        margin-top: 50px;
    }

    .skills-main-ul li{
        border: 2px solid var(--Secondarycolor);
        border-radius: 8px;
        color: var(--Secondarytextcolor);
    }

    .skills-html{
        display: flex;
        justify-content: center;
        align-items: center;
        width: 120px;
        height: 50px;
    }
    .skills-html-img{
        
        width: 32px;
        height: 32px;
    }
    .skills-html-p{
        font-size: 2rem;
        
    }
    .skills-css{
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100px;
        height: 50px;
    }
    .skills-css-img{
        
        width: 32px;
        height: 32px;
    }
    .skills-css-p{
        font-size: 2rem;
        
    }
    .skills-javascript{
        display: flex;
        justify-content: center;
        align-items: center;
        width: 230px;
        height: 50px;
    }
    .skills-javascript-img{
        
        width: 32px;
        height: 32px;
    }
    .skills-javascript-p{
        font-size: 2rem;
    }

    /*Education and Work Section*/

    .educationworkarticle{
        display: flex;
        justify-content: center;
    }

    .educationworkcontainer{
        width: var(--Universalwidth);
        border: 2px solid rgb(255, 0, 0);
    }

    .educationworklabels{
        display: flex;
        justify-content: space-around;
        list-style: none;
        
    }

    .educationh2{
        text-align: center;
        cursor: pointer;

    }

    .workh2{
        text-align: center;
        cursor: pointer;
    }

    .educationh2:hover h2{
        background-color: #28A745;
    }

    .workh2:hover h2{
        background-color: #BB86FC;
    }

    .educationinput{
        display: none;
    }

    .workinput{
        display: none;
    }

    .educationinput:checked ~ .purdue{
        min-height: 500px;
        padding: 10px 10px 20px;
    }

    .workinput:checked ~ .subway{
        min-height: 500px;
        padding: 10px 10px 20px;
        position: relative;
        right: 100%;
        margin-left: 8.7px;
        
    }

    .purdue{
        border: 2px solid blue;
        max-height: 0;
        overflow: hidden;
        
    }

    .highschool{
        border: 2px solid blueviolet;
        max-height: 0;
        overflow: hidden;
    }

    .subway{
        border: 2px solid green;
        max-height: 0;
        overflow: hidden;
        
    }


    /*Projects*/

   

    /* .projects{
        display: flex;
        justify-content: center;
    }

    .projectscontainer{  
        border: 2px solid #03DAC6;
        width: var(--Universalwidth);
    } */

}

